src/semantico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     declaraciones -> declaraciones instruccion
Rule 3     declaraciones -> instruccion
Rule 4     instruccion -> asignacion
Rule 5     instruccion -> estructura_control
Rule 6     instruccion -> declaracion_funcion
Rule 7     instruccion -> llamada_funcion
Rule 8     instruccion -> impresion
Rule 9     instruccion -> entrada
Rule 10    instruccion -> expresion
Rule 11    asignacion -> VARIABLE_LOCAL ASIGNACION expresion
Rule 12    asignacion -> CONSTANTE ASIGNACION expresion
Rule 13    asignacion -> VARIABLE_LOCAL ASIGNACION estructura_datos
Rule 14    entrada -> VARIABLE_LOCAL ASIGNACION GETS
Rule 15    marcar_var -> VARIABLE_LOCAL
Rule 16    expresion -> VARIABLE_LOCAL
Rule 17    expresion -> CONSTANTE
Rule 18    expresion -> expresion MAS expresion
Rule 19    expresion -> expresion MENOS expresion
Rule 20    expresion -> expresion POR expresion
Rule 21    expresion -> expresion DIVIDIDO expresion
Rule 22    expresion -> expresion MODULO expresion
Rule 23    expresion -> expresion IGUAL_QUE expresion
Rule 24    expresion -> expresion DIFERENTE expresion
Rule 25    expresion -> expresion MAYOR_IGUAL expresion
Rule 26    expresion -> expresion MENOR_IGUAL expresion
Rule 27    expresion -> expresion MAYOR expresion
Rule 28    expresion -> expresion MENOR expresion
Rule 29    expresion -> expresion AND expresion
Rule 30    expresion -> expresion OR expresion
Rule 31    expresion -> NOT expresion
Rule 32    expresion -> PAREN_IZQ expresion PAREN_DER
Rule 33    expresion -> INTEGER
Rule 34    expresion -> FLOAT
Rule 35    expresion -> STRING
Rule 36    expresion -> TRUE
Rule 37    expresion -> FALSE
Rule 38    expresion -> NIL
Rule 39    estructura_datos -> arreglo
Rule 40    estructura_datos -> hash
Rule 41    estructura_datos -> rango
Rule 42    arreglo -> CORCHETE_IZQ elementos_opt CORCHETE_DER
Rule 43    elementos_opt -> elementos
Rule 44    elementos_opt -> empty
Rule 45    elementos -> expresion
Rule 46    elementos -> expresion COMA elementos
Rule 47    hash -> LLAVE_IZQ pares_opt LLAVE_DER
Rule 48    pares_opt -> pares
Rule 49    pares_opt -> empty
Rule 50    pares -> STRING ASIGNACION_HASH expresion
Rule 51    pares -> STRING ASIGNACION_HASH expresion COMA pares
Rule 52    rango -> INTEGER RANGO INTEGER
Rule 53    estructura_control -> IF expresion declaraciones END
Rule 54    estructura_control -> IF expresion declaraciones ELSE declaraciones END
Rule 55    estructura_control -> WHILE expresion DO declaraciones END
Rule 56    estructura_control -> WHILE expresion declaraciones END
Rule 57    estructura_control -> FOR marcar_var IN rango declaraciones END
Rule 58    parametro -> VARIABLE_LOCAL
Rule 59    parametros -> parametro
Rule 60    parametros -> parametro COMA parametros
Rule 61    parametros_opt -> parametros
Rule 62    parametros_opt -> empty
Rule 63    declaracion_funcion -> DEF marcar_var PAREN_IZQ parametros_opt PAREN_DER declaraciones END
Rule 64    declaracion_funcion -> DEF marcar_var declaraciones END
Rule 65    llamada_funcion -> VARIABLE_LOCAL PAREN_IZQ elementos_opt PAREN_DER
Rule 66    llamada_funcion -> RETURN expresion
Rule 67    impresion -> PUTS expresion
Rule 68    empty -> <empty>

Terminals, with rules where they appear

AND                  : 29
ASIGNACION           : 11 12 13 14
ASIGNACION_HASH      : 50 51
COMA                 : 46 51 60
CONSTANTE            : 12 17
CORCHETE_DER         : 42
CORCHETE_IZQ         : 42
DEF                  : 63 64
DIFERENTE            : 24
DIVIDIDO             : 21
DO                   : 55
ELSE                 : 54
END                  : 53 54 55 56 57 63 64
FALSE                : 37
FLOAT                : 34
FOR                  : 57
GETS                 : 14
IF                   : 53 54
IGUAL_QUE            : 23
IN                   : 57
INTEGER              : 33 52 52
LLAVE_DER            : 47
LLAVE_IZQ            : 47
MAS                  : 18
MAYOR                : 27
MAYOR_IGUAL          : 25
MENOR                : 28
MENOR_IGUAL          : 26
MENOS                : 19
MODULO               : 22
NIL                  : 38
NOT                  : 31
OR                   : 30
PAREN_DER            : 32 63 65
PAREN_IZQ            : 32 63 65
POR                  : 20
PUTS                 : 67
RANGO                : 52
RETURN               : 66
STRING               : 35 50 51
TRUE                 : 36
VARIABLE_LOCAL       : 11 13 14 15 16 58 65
WHILE                : 55 56
error                : 

Nonterminals, with rules where they appear

arreglo              : 39
asignacion           : 4
declaracion_funcion  : 6
declaraciones        : 1 2 53 54 54 55 56 57 63 64
elementos            : 43 46
elementos_opt        : 42 65
empty                : 44 49 62
entrada              : 9
estructura_control   : 5
estructura_datos     : 13
expresion            : 10 11 12 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 45 46 50 51 53 54 55 56 66 67
hash                 : 40
impresion            : 8
instruccion          : 2 3
llamada_funcion      : 7
marcar_var           : 57 63 64
parametro            : 59 60
parametros           : 60 61
parametros_opt       : 63
pares                : 48 51
pares_opt            : 47
programa             : 0
rango                : 41 57

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (2) declaraciones -> . declaraciones instruccion
    (3) declaraciones -> . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . estructura_control
    (6) instruccion -> . declaracion_funcion
    (7) instruccion -> . llamada_funcion
    (8) instruccion -> . impresion
    (9) instruccion -> . entrada
    (10) instruccion -> . expresion
    (11) asignacion -> . VARIABLE_LOCAL ASIGNACION expresion
    (12) asignacion -> . CONSTANTE ASIGNACION expresion
    (13) asignacion -> . VARIABLE_LOCAL ASIGNACION estructura_datos
    (53) estructura_control -> . IF expresion declaraciones END
    (54) estructura_control -> . IF expresion declaraciones ELSE declaraciones END
    (55) estructura_control -> . WHILE expresion DO declaraciones END
    (56) estructura_control -> . WHILE expresion declaraciones END
    (57) estructura_control -> . FOR marcar_var IN rango declaraciones END
    (63) declaracion_funcion -> . DEF marcar_var PAREN_IZQ parametros_opt PAREN_DER declaraciones END
    (64) declaracion_funcion -> . DEF marcar_var declaraciones END
    (65) llamada_funcion -> . VARIABLE_LOCAL PAREN_IZQ elementos_opt PAREN_DER
    (66) llamada_funcion -> . RETURN expresion
    (67) impresion -> . PUTS expresion
    (14) entrada -> . VARIABLE_LOCAL ASIGNACION GETS
    (16) expresion -> . VARIABLE_LOCAL
    (17) expresion -> . CONSTANTE
    (18) expresion -> . expresion MAS expresion
    (19) expresion -> . expresion MENOS expresion
    (20) expresion -> . expresion POR expresion
    (21) expresion -> . expresion DIVIDIDO expresion
    (22) expresion -> . expresion MODULO expresion
    (23) expresion -> . expresion IGUAL_QUE expresion
    (24) expresion -> . expresion DIFERENTE expresion
    (25) expresion -> . expresion MAYOR_IGUAL expresion
    (26) expresion -> . expresion MENOR_IGUAL expresion
    (27) expresion -> . expresion MAYOR expresion
    (28) expresion -> . expresion MENOR expresion
    (29) expresion -> . expresion AND expresion
    (30) expresion -> . expresion OR expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PAREN_IZQ expresion PAREN_DER
    (33) expresion -> . INTEGER
    (34) expresion -> . FLOAT
    (35) expresion -> . STRING
    (36) expresion -> . TRUE
    (37) expresion -> . FALSE
    (38) expresion -> . NIL

    VARIABLE_LOCAL  shift and go to state 11
    CONSTANTE       shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    DEF             shift and go to state 16
    RETURN          shift and go to state 18
    PUTS            shift and go to state 19
    NOT             shift and go to state 20
    PAREN_IZQ       shift and go to state 17
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NIL             shift and go to state 26

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    asignacion                     shift and go to state 4
    estructura_control             shift and go to state 5
    declaracion_funcion            shift and go to state 6
    llamada_funcion                shift and go to state 7
    impresion                      shift and go to state 8
    entrada                        shift and go to state 9
    expresion                      shift and go to state 10

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .
    (2) declaraciones -> declaraciones . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . estructura_control
    (6) instruccion -> . declaracion_funcion
    (7) instruccion -> . llamada_funcion
    (8) instruccion -> . impresion
    (9) instruccion -> . entrada
    (10) instruccion -> . expresion
    (11) asignacion -> . VARIABLE_LOCAL ASIGNACION expresion
    (12) asignacion -> . CONSTANTE ASIGNACION expresion
    (13) asignacion -> . VARIABLE_LOCAL ASIGNACION estructura_datos
    (53) estructura_control -> . IF expresion declaraciones END
    (54) estructura_control -> . IF expresion declaraciones ELSE declaraciones END
    (55) estructura_control -> . WHILE expresion DO declaraciones END
    (56) estructura_control -> . WHILE expresion declaraciones END
    (57) estructura_control -> . FOR marcar_var IN rango declaraciones END
    (63) declaracion_funcion -> . DEF marcar_var PAREN_IZQ parametros_opt PAREN_DER declaraciones END
    (64) declaracion_funcion -> . DEF marcar_var declaraciones END
    (65) llamada_funcion -> . VARIABLE_LOCAL PAREN_IZQ elementos_opt PAREN_DER
    (66) llamada_funcion -> . RETURN expresion
    (67) impresion -> . PUTS expresion
    (14) entrada -> . VARIABLE_LOCAL ASIGNACION GETS
    (16) expresion -> . VARIABLE_LOCAL
    (17) expresion -> . CONSTANTE
    (18) expresion -> . expresion MAS expresion
    (19) expresion -> . expresion MENOS expresion
    (20) expresion -> . expresion POR expresion
    (21) expresion -> . expresion DIVIDIDO expresion
    (22) expresion -> . expresion MODULO expresion
    (23) expresion -> . expresion IGUAL_QUE expresion
    (24) expresion -> . expresion DIFERENTE expresion
    (25) expresion -> . expresion MAYOR_IGUAL expresion
    (26) expresion -> . expresion MENOR_IGUAL expresion
    (27) expresion -> . expresion MAYOR expresion
    (28) expresion -> . expresion MENOR expresion
    (29) expresion -> . expresion AND expresion
    (30) expresion -> . expresion OR expresion
    (31) expresion -> . NOT expresion
    (32) expresion -> . PAREN_IZQ expresion PAREN_DER
    (33) expresion -> . INTEGER
    (34) expresion -> . FLOAT
    (35) expresion -> . STRING
    (36) expresion -> . TRUE
    (37) expresion -> . FALSE
    (38) expresion -> . NIL

    $end            reduce using rule 1 (programa -> declaraciones .)
    VARIABLE_LOCAL  shift and go to state 11
    CONSTANTE       shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    DEF             shift and go to state 16
    RETURN          shift and go to state 18
    PUTS            shift and go to state 19
    NOT             shift and go to state 20
    PAREN_IZQ       shift and go to state 17
    INTEGER         shift and go to state 21
    FLOAT           shift and go to state 22
    STRING          shift and go to state 23
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NIL             shift and go to state 26

    instruccion                    shift and go to state 27
    asignacion                     shift and go to state 4
    estructura_control             shift and go to state 5
    declaracion_funcion            shift and go to state 6
    llamada_funcion                shift and go to state 7
    impresion                      shift and go to state 8
    entrada                        shift and go to state 9
    expresion                      shift and go to state 10

state 3

    (3) declaraciones -> instruccion .

    VARIABLE_LOCAL  reduce using rule 3 (declaraciones -> instruccion .)
    CONSTANTE       reduce using rule 3 (declaraciones -> instruccion .)
    IF              reduce using rule 3 (declaraciones -> instruccion .)
    WHILE           reduce using rule 3 (declaraciones -> instruccion .)
    FOR             reduce using rule 3 (declaraciones -> instruccion .)
    DEF             reduce using rule 3 (declaraciones -> instruccion .)
    RETURN          reduce using rule 3 (declaraciones -> instruccion .)
    PUTS            reduce using rule 3 (declaraciones -> instruccion .)
    NOT             reduce using rule 3 (declaraciones -> instruccion .)
    PAREN_IZQ       reduce using rule 3 (declaraciones -> instruccion .)
    INTEGER         reduce using rule 3 (declaraciones -> instruccion .)
    FLOAT           reduce using rule 3 (declaraciones -> instruccion .)
    STRING          reduce using rule 3 (declaraciones -> instruccion .)
    TRUE            reduce using rule 3 (declaraciones -> instruccion .)
    FALSE           reduce using rule 3 (declaraciones -> instruccion .)
    NIL             reduce using rule 3 (declaraciones -> instruccion .)
    $end            reduce using rule 3 (declaraciones -> instruccion .)
    END             reduce using rule 3 (declaraciones -> instruccion .)
    ELSE            reduce using rule 3 (declaraciones -> instruccion .)


state 4

    (4) instruccion -> asignacion .

    VARIABLE_LOCAL  reduce using rule 4 (instruccion -> asignacion .)
    CONSTANTE       reduce using rule 4 (instruccion -> asignacion .)
    IF              reduce using rule 4 (instruccion -> asignacion .)
    WHILE           reduce using rule 4 (instruccion -> asignacion .)
    FOR             reduce using rule 4 (instruccion -> asignacion .)
    DEF             reduce using rule 4 (instruccion -> asignacion .)
    RETURN          reduce using rule 4 (instruccion -> asignacion .)
    PUTS            reduce using rule 4 (instruccion -> asignacion .)
    NOT             reduce using rule 4 (instruccion -> asignacion .)
    PAREN_IZQ       reduce using rule 4 (instruccion -> asignacion .)
    INTEGER         reduce using rule 4 (instruccion -> asignacion .)
    FLOAT           reduce using rule 4 (instruccion -> asignacion .)
    STRING          reduce using rule 4 (instruccion -> asignacion .)
    TRUE            reduce using rule 4 (instruccion -> asignacion .)
    FALSE           reduce using rule 4 (instruccion -> asignacion .)
    NIL             reduce using rule 4 (instruccion -> asignacion .)
    $end            reduce using rule 4 (instruccion -> asignacion .)
    END             reduce using rule 4 (instruccion -> asignacion .)
    ELSE            reduce using rule 4 (instruccion -> asignacion .)


state 5

    (5) instruccion -> estructura_control .

    VARIABLE_LOCAL  reduce using rule 5 (instruccion -> estructura_control .)
    CONSTANTE       reduce using rule 5 (instruccion -> estructura_control .)
    IF              reduce using rule 5 (instruccion -> estructura_control .)
    WHILE           reduce using rule 5 (instruccion -> estructura_control .)
    FOR             reduce using rule 5 (instruccion -> estructura_control .)
    DEF             reduce using rule 5 (instruccion -> estructura_control .)
    RETURN          reduce using rule 5 (instruccion -> estructura_control .)
    PUTS            reduce using rule 5 (instruccion -> estructura_control .)
    NOT             reduce using rule 5 (instruccion -> estructura_control .)
    PAREN_IZQ       reduce using rule 5 (instruccion -> estructura_control .)
    INTEGER         reduce using rule 5 (instruccion -> estructura_control .)
    FLOAT           reduce using rule 5 (instruccion -> estructura_control .)
    STRING          reduce using rule 5 (instruccion -> estructura_control .)
    TRUE            reduce using rule 5 (instruccion -> estructura_control .)
    FALSE           reduce using rule 5 (instruccion -> estructura_control .)
    NIL             reduce using rule 5 (instruccion -> estructura_control .)
    $end            reduce using rule 5 (instruccion -> estructura_control .)
    END             reduce using rule 5 (instruccion -> estructura_control .)
    ELSE            reduce using rule 5 (instruccion -> estructura_control .)


state 6

    (6) instruccion -> declaracion_funcion .

    VARIABLE_LOCAL  reduce using rule 6 (instruccion -> declaracion_funcion .)
    CONSTANTE       reduce using rule 6 (instruccion -> declaracion_funcion .)
    IF              reduce using rule 6 (instruccion -> declaracion_funcion .)
    WHILE           reduce using rule 6 (instruccion -> declaracion_funcion .)
    FOR             reduce using rule 6 (instruccion -> declaracion_funcion .)
    DEF             reduce using rule 6 (instruccion -> declaracion_funcion .)
    RETURN          reduce using rule 6 (instruccion -> declaracion_funcion .)
    PUTS            reduce using rule 6 (instruccion -> declaracion_funcion .)
    NOT             reduce using rule 6 (instruccion -> declaracion_funcion .)
    PAREN_IZQ       reduce using rule 6 (instruccion -> declaracion_funcion .)
    INTEGER         reduce using rule 6 (instruccion -> declaracion_funcion .)
    FLOAT           reduce using rule 6 (instruccion -> declaracion_funcion .)
    STRING          reduce using rule 6 (instruccion -> declaracion_funcion .)
    TRUE            reduce using rule 6 (instruccion -> declaracion_funcion .)
    FALSE           reduce using rule 6 (instruccion -> declaracion_funcion .)
    NIL             reduce using rule 6 (instruccion -> declaracion_funcion .)
    $end            reduce using rule 6 (instruccion -> declaracion_funcion .)
    END             reduce using rule 6 (instruccion -> declaracion_funcion .)
    ELSE            reduce using rule 6 (instruccion -> declaracion_funcion .)


state 7

    (7) instruccion -> llamada_funcion .

    VARIABLE_LOCAL  reduce using rule 7 (instruccion -> llamada_funcion .)
    CONSTANTE       reduce using rule 7 (instruccion -> llamada_funcion .)
    IF              reduce using rule 7 (instruccion -> llamada_funcion .)
    WHILE           reduce using rule 7 (instruccion -> llamada_funcion .)
    FOR             reduce using rule 7 (instruccion -> llamada_funcion .)
    DEF             reduce using rule 7 (instruccion -> llamada_funcion .)
    RETURN          reduce using rule 7 (instruccion -> llamada_funcion .)
    PUTS            reduce using rule 7 (instruccion -> llamada_funcion .)
    NOT             reduce using rule 7 (instruccion -> llamada_funcion .)
    PAREN_IZQ       reduce using rule 7 (instruccion -> llamada_funcion .)
    INTEGER         reduce using rule 7 (instruccion -> llamada_funcion .)
    FLOAT           reduce using rule 7 (instruccion -> llamada_funcion .)
    STRING          reduce using rule 7 (instruccion -> llamada_funcion .)
    TRUE            reduce using rule 7 (instruccion -> llamada_funcion .)
    FALSE           reduce using rule 7 (instruccion -> llamada_funcion .)
    NIL             reduce using rule 7 (instruccion -> llamada_funcion .)
    $end            reduce using rule 7 (instruccion -> llamada_funcion .)
    END             reduce using rule 7 (instruccion -> llamada_funcion .)
    ELSE            reduce using rule 7 (instruccion -> llamada_funcion .)


state 8

    (8) instruccion -> impresion .

    VARIABLE_LOCAL  reduce using rule 8 (instruccion -> impresion .)
    CONSTANTE       reduce using rule 8 (instruccion -> impresion .)
    IF              reduce using rule 8 (instruccion -> impresion .)
    WHILE           reduce using rule 8 (instruccion -> impresion .)
    FOR             reduce using rule 8 (instruccion -> impresion .)
    DEF             reduce using rule 8 (instruccion -> impresion .)
    RETURN          reduce using rule 8 (instruccion -> impresion .)
    PUTS            reduce using rule 8 (instruccion -> impresion .)
    NOT             reduce using rule 8 (instruccion -> impresion .)
    PAREN_IZQ       reduce using rule 8 (instruccion -> impresion .)
    INTEGER         reduce using rule 8 (instruccion -> impresion .)
    FLOAT           reduce using rule 8 (instruccion -> impresion .)
    STRING          reduce using rule 8 (instruccion -> impresion .)
    TRUE            reduce using rule 8 (instruccion -> impresion .)
    FALSE           reduce using rule 8 (instruccion -> impresion .)
    NIL             reduce using rule 8 (instruccion -> impresion .)
    $end            reduce using rule 8 (instruccion -> impresion .)
    END             reduce using rule 8 (instruccion -> impresion .)
    ELSE            reduce using rule 8 (instruccion -> impresion .)


state 9

    (9) instruccion -> entrada .

    VARIABLE_LOCAL  reduce using rule 9 (instruccion -> entrada .)
    CONSTANTE       reduce using rule 9 (instruccion -> entrada .)
    IF              reduce using rule 9 (instruccion -> entrada .)
    WHILE           reduce using rule 9 (instruccion -> entrada .)
    FOR             reduce using rule 9 (instruccion -> entrada .)
    DEF             reduce using rule 9 (instruccion -> entrada .)
    RETURN          reduce using rule 9 (instruccion -> entrada .)
    PUTS            reduce using rule 9 (instruccion -> entrada .)
    NOT             reduce using rule 9 (instruccion -> entrada .)
    PAREN_IZQ       reduce using rule 9 (instruccion -> entrada .)
    INTEGER         reduce using rule 9 (instruccion -> entrada .)
    FLOAT           reduce using rule 9 (instruccion -> entrada .)
    STRING          reduce using rule 9 (instruccion -> entrada .)
    TRUE            reduce using rule 9 (instruccion -> entrada .)
    FALSE           reduce using rule 9 (instruccion -> entrada .)
    NIL             reduce using rule 9 (instruccion -> entrada .)
    $end            reduce using rule 9 (instruccion -> entrada .)
    END             reduce using rule 9 (instruccion -> entrada .)
    ELSE            reduce using rule 9 (instruccion -> entrada .)


state 10

    (10) instruccion -> expresion .
    (18) expresion -> expresion . MAS expresion
    (19) expresion -> expresion . MENOS expresion
    (20) expresion -> expresion . POR expresion
    (21) expresion -> expresion . DIVIDIDO expresion
    (22) expresion -> expresion . MODULO expresion
    (23) expresion -> expresion . IGUAL_QUE expresion
    (24) expresion -> expresion . DIFERENTE expresion
    (25) expresion -> expresion . MAYOR_IGUAL expresion
    (26) expresion -> expresion . MENOR_IGUAL expresion
    (27) expresion -> expresion . MAYOR expresion
    (28) expresion -> expresion . MENOR expresion
    (29) expresion -> expresion . AND expresion
    (30) expresion -> expresion . OR expresion

    VARIABLE_LOCAL  reduce using rule 10 (instruccion -> expresion .)
    CONSTANTE       reduce using rule 10 (instruccion -> expresion .)
    IF              reduce using rule 10 (instruccion -> expresion .)
    WHILE           reduce using rule 10 (instruccion -> expresion .)
    FOR             reduce using rule 10 (instruccion -> expresion .)
    DEF             reduce using rule 10 (instruccion -> expresion .)
    RETURN          reduce using rule 10 (instruccion -> expresion .)
    PUTS            reduce using rule 10 (instruccion -> expresion .)
    NOT             reduce using rule 10 (instruccion -> expresion .)
    PAREN_IZQ       reduce using rule 10 (instruccion -> expresion .)
    INTEGER         reduce using rule 10 (instruccion -> expresion .)
    FLOAT           reduce using rule 10 (instruccion -> expresion .)
    STRING          reduce using rule 10 (instruccion -> expresion .)
    TRUE            reduce using rule 10 (instruccion -> expresion .)
    FALSE           reduce using rule 10 (instruccion -> expresion .)
    NIL             reduce using rule 10 (instruccion -> expresion .)
    $end            reduce using rule 10 (instruccion -> expresion .)
    END             reduce using rule 10 (instruccion -> expresion .)
    ELSE            reduce using rule 10 (instruccion -> expresion .)
    MAS             shift and go to state 28
    MENOS           shift and go to state 29
    POR             shift and go to state 30
    DIVIDIDO        shift and go to state 31
    MODULO          shift and go to state 32
    IGUAL_QUE       shift and go to state 33
    DIFERENTE       shift and go to state 34
    MAYOR_IGUAL     shift and go to state 35
    MENOR_IGUAL     shift and go to state 36
    MAYOR           shift and go to state 37
    MENOR           shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40


state 11

    (11) asignacion -> VARIABLE_LOCAL . ASIGNACION expresion
    (13) asignacion -> VARIABLE_LOCAL . ASIGNACION estructura_datos
    (65) llamada_funcion -> VARIABLE_LOCAL . PAREN_IZQ elementos_opt PAREN_DER
    (14) entrada -> VARIABLE_LOCAL . ASIGNACION GETS
    (16) expresion -> VARIABLE_LOCAL .

  ! shift/reduce conflict for PAREN_IZQ resolved as shift
    ASIGNACION      shift and go to state 41
    PAREN_IZQ       shift and go to state 42
    MAS             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    MENOS           reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    POR             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    DIVIDIDO        reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    MODULO          reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    IGUAL_QUE       reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    DIFERENTE       reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    MAYOR_IGUAL     reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    MENOR_IGUAL     reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    MAYOR           reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    MENOR           reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    AND             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    OR              reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    VARIABLE_LOCAL  reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    CONSTANTE       reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    IF              reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    WHILE           reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    FOR             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    DEF             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    RETURN          reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    PUTS            reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    NOT             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    INTEGER         reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    FLOAT           reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    STRING          reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    TRUE            reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    FALSE           reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    NIL             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    $end            reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    END             reduce using rule 16 (expresion -> VARIABLE_LOCAL .)
    ELSE            reduce using rule 16 (expresion -> VARIABLE_LOCAL .)

  ! PAREN_IZQ       [ reduce using rule 16 (expresion -> VARIABLE_LOCAL .) ]


state 12

    (12) asignacion -> CONSTANTE . ASIGNACION expresion
    (17) expresion -> CONSTANTE .
